<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">wellnessme_andro</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_come_consult_wi">Come consult with us</string>
  <string name="lbl_thu">Thu</string>
  <string name="lbl_your_schedule">Your Schedule</string>
  <string name="lbl_m">m</string>
  <string name="lbl_height">Height</string>
  <string name="lbl_sleep_schedule">Sleep Schedule</string>
  <string name="msg_in_14hours_30mi">in 14hours 30minutes</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up.</string>
  <string name="lbl_05_10am">05:10am</string>
  <string name="lbl_email_address">Email Address</string>
  <string name="lbl_6_22">6.2</string>
  <string name="lbl_birth">Birth</string>
  <string name="lbl_302">30</string>
  <string name="lbl_today_schedule">Today Schedule</string>
  <string name="lbl_6_2">6.2 </string>
  <string name="lbl_consultation">Consultation</string>
  <string name="lbl_learn_more">Learn More</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_8h_20m">8h 20m</string>
  <string name="lbl_log_out">Log Out</string>
  <string name="lbl_sign_in">Sign In</string>
  <string name="lbl_listen_now">Listen  now</string>
  <string name="lbl_edit">Edit</string>
  <string name="lbl_thus">Thus</string>
  <string name="lbl_personal_data2">Personal data</string>
  <string name="lbl_43_increase">43% increase</string>
  <string name="lbl_09_00pm">09:00pm</string>
  <string name="lbl_hours_per_day">hours per day</string>
  <string name="lbl_start_now"> Start Now</string>
  <string name="lbl_15_min">15 Min</string>
  <string name="msg_set_your_new_pa">Set your new password</string>
  <string name="lbl_meditation">Meditation</string>
  <string name="lbl_wed">Wed</string>
  <string name="msg_password_confir">Password Confirmation</string>
  <string name="lbl_a">a</string>
  <string name="lbl_sun">Sun</string>
  <string name="lbl_b">b</string>
  <string name="lbl_relax_sounds">Relax Sounds </string>
  <string name="lbl_alarm_05_10am">Alarm, 05:10am</string>
  <string name="lbl_h">h</string>
  <string name="lbl_4h">4h</string>
  <string name="lbl_sleep_tracker">Sleep Tracker</string>
  <string name="msg_sometimes_the_m">Sometimes the most productive thing you can do is relax.</string>
  <string name="msg_pop_up_notifica">Pop-up Notification</string>
  <string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
  <string name="lbl_weight">Weight</string>
  <string name="lbl_180_cm2">180 cm</string>
  <string name="lbl_alarm">Alarm, </string>
  <string name="lbl_lovely_deserts">Lovely Deserts</string>
  <string name="lbl_watch_now">Watch Now</string>
  <string name="lbl_the_hill_sides">The Hill Sides</string>
  <string name="lbl_180cm">180cm</string>
  <string name="lbl_39_min">39 Min</string>
  <string name="msg_find_your_accou">Find Your Account</string>
  <string name="msg_meditation_re2">Meditation &amp; Relaxation</string>
  <string name="lbl_view_more">View More</string>
  <string name="lbl_10h">10h</string>
  <string name="lbl_painting_forest">Painting Forest</string>
  <string name="lbl_30"> 30</string>
  <string name="msg_vibrate_when_al">vibrate When Alarm Sound</string>
  <string name="lbl_user">User</string>
  <string name="lbl_play_now">Play Now</string>
  <string name="msg_calm_your_mind2">Calm your mind with little relax sound</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_fri">Fri</string>
  <string name="lbl_try_now">Try  now</string>
  <string name="lbl_go_to_homepage">Go To Homepage</string>
  <string name="lbl_activity_status">Activity Status</string>
  <string name="lbl_mon">Mon</string>
  <string name="lbl_hours">hours </string>
  <string name="lbl_personal_data">Personal Data</string>
  <string name="msg_enter_the_code">Enter the code that was sent to your email/number</string>
  <string name="lbl_2h">2h</string>
  <string name="lbl_account">Account</string>
  <string name="msg_by_painting_wi">By: Painting with Passion</string>
  <string name="lbl_bedtime">Bedtime, </string>
  <string name="lbl_22yo">22yo</string>
  <string name="msg_techniques_ben">Techniques, Benefits, and a Beginner\u2019s How-To</string>
  <string name="lbl_tue">Tue</string>
  <string name="msg_email_address">Email Address/ Phone Number</string>
  <string name="lbl_0h">0h</string>
  <string name="lbl_20">20</string>
  <string name="lbl_65kg">65kg</string>
  <string name="lbl_50_min">50 Min</string>
  <string name="lbl_22">22</string>
  <string name="lbl_age">Age</string>
  <string name="msg_last_night_slee">Last Night Sleep</string>
  <string name="lbl_confirm">Confirm</string>
  <string name="lbl_hours_of_sleep">Hours of sleep</string>
  <string name="lbl_add_alarm">Add Alarm</string>
  <string name="msg_meditation_re">Meditation &amp;
Relaxation  </string>
  <string name="msg_bedtime_09_00p">Bedtime, 09:00pm</string>
  <string name="lbl_65_kg2">65 kg</string>
  <string name="lbl_contact_us">Contact Us</string>
  <string name="lbl_sat">Sat</string>
  <string name="msg_in_6hours_22min">in 6hours 22minutes</string>
  <string name="lbl_12">12</string>
  <string name="lbl_relax_sound">Relax Sound</string>
  <string name="lbl_the_sengkuni">THE SENGKUNI</string>
  <string name="msg_sign_up_for_fre">Sign Up For Free!</string>
  <string name="lbl_13">13</string>
  <string name="lbl_sign_up">Sign Up.</string>
  <string name="lbl_in">in </string>
  <string name="lbl_sign_up2">Sign Up</string>
  <string name="lbl_16">16</string>
  <string name="lbl_bedtime2">Bedtime</string>
  <string name="lbl_repeat">Repeat</string>
  <string name="lbl_14">14</string>
  <string name="lbl_name">Name</string>
  <string name="lbl_15">15</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_submit">Submit</string>
  <string name="lbl_20_min">20 Min</string>
  <string name="lbl_8h">8h</string>
  <string name="msg_sign_in_to_well">Sign In To WellnessMe</string>
  <string name="msg_8hours_30minute">8hours 30minutes</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_hours2">hours</string>
  <string name="lbl_confirmation">Confirmation</string>
  <string name="lbl_check">Check</string>
  <string name="msg_calm_your_mind">calm your mind and calm your body</string>
  <string name="lbl_6">6</string>
  <string name="lbl_8">8</string>
  <string name="msg_daily_sleep_sch">Daily Sleep Schedule</string>
  <string name="lbl_minutes">minutes</string>
  <string name="lbl_22_yo2">22 yo</string>
  <string name="msg_average_sleep_t">Average sleep time this week</string>
  <string name="lbl_wellnessme">WellNessMe</string>
  <string name="lbl_add">Add</string>
  <string name="lbl_forgot_password">Forgot Password</string>
  <string name="lbl_09_00_pm2">09:00 PM</string>
  <string name="lbl_other">Other</string>
  <string name="lbl_notification">Notification</string>
  <string name="msg_guided_by_a_sho">Guided by a short introductory course,
start trying meditation.</string>
  <string name="lbl_welcome_back">Welcome Back,</string>
  <string name="msg_enter_your_emai">Enter your email or mobile number to find your account.</string>
  <string name="msg_let_s_meditatio">Let\u2019s Meditation</string>
  <string name="msg_ideal_hours_for">Ideal Hours for Sleep</string>
  <string name="lbl_45_00">45:00</string>
  <string name="lbl_mon_to_fri">Mon to Fri</string>
  <string name="lbl_6h">6h</string>
  <string name="lbl_mountaineers">Mountaineers</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
