<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="pwVM" type="com.wellnessmeandro.app.modules.pw.data.viewmodel.PwVM"/>
    </data>
    <LinearLayout android:id="@+id/linearFive"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSignInTofreu"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_169pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{pwVM.pwModel.txtSignInTofreu}"
            style="@style/txtUrbanistextrabold30" tools:text="@string/msg_find_your_accou"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtSetyournewpa"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_35pxh"
            android:layout_marginStart="@dimen/_35pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{pwVM.pwModel.txtSetyournewpa}"
            style="@style/txtUrbanistextrabold18" tools:text="@string/msg_set_your_new_pa"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEmailAddress"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{pwVM.pwModel.txtEmailAddress}"
            style="@style/txtUrbanistextrabold14" tools:text="@string/lbl_password"/>
        <FrameLayout android:id="@+id/frameContent"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="@dimen/_343pxh" style="@style/groupStylewhite_5">
            <ImageView android:id="@+id/imageEye"
                android:layout_gravity="start"
                android:layout_height="@dimen/_14pxh"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_eye"
                tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEmailAddressOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{pwVM.pwModel.txtEmailAddressOne}"
            style="@style/txtUrbanistextrabold14" tools:text="@string/msg_password_confir"/>
        <LinearLayout android:id="@+id/linearContent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_5">
            <ImageView android:id="@+id/imageLocation"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="@dimen/_16pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_location"
                tools:ignore="ContentDescription" tools:src="@drawable/img_location"/>
            <ImageView android:id="@+id/imageEyeOne"
                android:layout_height="@dimen/_14pxh"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_269pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_eye"
                tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearContent1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_239pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyledeep_purple_2">
            <TextView android:ellipsize="end" android:id="@+id/txtText"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginStart="@dimen/_122pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_weight="0.76" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{pwVM.pwModel.txtText}"
                style="@style/txtUrbanistextrabold18" tools:text="@string/lbl_submit"/>
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginBottom="@dimen/_22pxv"
                android:layout_marginEnd="@dimen/_125pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="@dimen/_19pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        </LinearLayout>
    </LinearLayout>
</layout>
