<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="findVM" type="com.wellnessmeandro.app.modules.find.data.viewmodel.FindVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearThree"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_902">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSignInTofreu"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_178pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{findVM.findModel.txtSignInTofreu}"
            style="@style/txtUrbanistextrabold30" tools:text="@string/msg_find_your_accou"/>
        <TextView android:id="@+id/txtEnteryouremai"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:text="@{findVM.findModel.txtEnteryouremai}"
            style="@style/txtUrbanistextrabold16" tools:text="@string/msg_enter_your_emai"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{findVM.findModel.txtEmailAddress}"
            style="@style/txtUrbanistextrabold14" tools:text="@string/msg_email_address"/>
        <FrameLayout android:id="@+id/frameContent"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="@dimen/_343pxh" style="@style/groupStylewhite_6">
            <ImageView android:id="@+id/imageSettings"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_19pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_18pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_settings"
                tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
        </FrameLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearButtonPrimary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_334pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyledeep_purple_2">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearContent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_121pxh"
                android:layout_marginStart="@dimen/_121pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyledeep_purple_700">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtText"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.78"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{findVM.findModel.txtText}"
                    style="@style/txtUrbanistextrabold18" tools:text="@string/lbl_confirm"/>
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
